--- a/css/layout.css
+++ b/css/layout.css
@@ -45,7 +45,7 @@
 	#about .circle { width: 60px; height: 60px; background: #f7f7f7; display: inline-block; margin-right: 5px; vertical-align: middle;}
 	#about .circle img { width: 70%; height: auto; }
 	#about h5 { display: inline-block; vertical-align: middle; margin-bottom: 0; margin-right: 5px; }
-	#about h6 { font-size: 24px; font-size: 2.4rem; display: inline-block; margin-bottom: 30px;}
+	#about h6 { font-size: 34px; font-size: 3.4rem; display: inline-block; margin-bottom: 30px; }
 	#about div.button { padding: 10px; border: #ccc solid 3px; border-radius: 100px; vertical-align: middle; }
 	#about span { font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; font-style: italic; text-transform: none; vertical-align: top; margin: 0 5px;}
 	#about hr { width: 175px; border: solid 4px #d0512f; margin-bottom: 40px; }
@@ -78,7 +78,7 @@
 	#testimonial { }
 
 	#social { background-color: #1c0806; padding: 0; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
-	#social h4 { font-size: 16px; margin-bottom: 10px;}
+	#social h4 { font-size: 16px; margin-bottom: 10px; line-height: 1.4;}
 	#social .now-reading img, #social .now-listening img {height: 50px; width: auto; float: left; margin-right: 10px; box-shadow: 1px 1px 2px #ccc; -webkit-transition: all 0.05s linear; -moz-transition: all 0.05s linear; -o-transition: all 0.05s linear; -ms-transition: all 0.05s linear; transition: all 0.05s linear;}
 	#social .now-reading img:hover, #social .now-listening img:hover {height: 65px; width: auto; }
 	#social .now-reading p, #social .now-listening p { font-size: 14px; }
@@ -422,6 +422,7 @@
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 	@media only screen and (max-width: 479px) {
 		html { font-size: 7px; }
+		#about h6 { font-size: 24px; font-size: 2.4rem; display: inline-block; }
 		#about .circle { width: 40px; height: 40px; }
 	}
 
