--- a/css/base.css
+++ b/css/base.css
@@ -74,18 +74,15 @@
 	}
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 	h1 { font-size: 59px; font-size: 5.9rem; line-height: 1.0; }
-	h2 { font-size: 46px; line-height: 50px; margin-bottom: 50px;}
-	h3 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
-	h4 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
-	h5 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
-	h6 { font-size: 17px; line-height: 24px; }
+	h2 { font-size: 46px; line-height: 50px; margin-bottom: 30px;}
+	h3 { font-size: 35px; line-height: 40px; margin-bottom: 30px; }
+	h4 { font-size: 28px; line-height: 34px; margin-bottom: 30px; }
+	h5 { font-size: 21px; line-height: 30px; margin-bottom: 30px; }
+	h6 { font-size: 17px; line-height: 24px; margin-bottom: 20px; }
 	
-	h2.with-subtitle { margin-bottom:0; }
-	h2.big-text { font-size:64px; }
-
 	.wf-loading p { visibility: hidden; }
 	.wf-active p { visibility: visible; }
-	p { font-size: 14px; font-size: 1.4rem; margin: 0 0 20px 0; line-height: 1.6; letter-spacing: -1px; font-family: "Sentinel Ssm A", "Sentinel Ssm B", "Helvetica", sans-serif;}
+	p { font-size: 16px; font-size: 1.6rem; margin: 0 0 20px 0; line-height: 1.6; letter-spacing: -1px; font-family: "Sentinel Ssm A", "Sentinel Ssm B", "Helvetica", sans-serif;}
 	p.lead { font-size: 28px; font-size: 2.8rem; }
 	p img { margin: 0; }
 	span { font-family: "Sentinel Ssm A", "Sentinel Ssm B", "Helvetica", sans-serif; letter-spacing: -1px; }
@@ -98,13 +95,14 @@
 
 
 /*	Blockquotes  */
-	blockquote, blockquote p { font-size: 17px; line-height: 24px; color: #777; font-style: italic; }
-	blockquote { margin: 0 0 20px; padding: 9px 20px 0 19px; border-left: 1px solid #ddd; }
-	blockquote cite { display: block; font-size: 12px; color: #555; }
 	blockquote cite:before { content: "\2014 \0020"; }
 	blockquote cite a, blockquote cite a:visited, blockquote cite a:visited { color: #555; }
+	blockquote { border-left: 3px solid #ef4723; margin: 0 0 30px; padding: 0px 20px 0px 19px; }
+	blockquote p { color: #ef4723; font-style: italic; font-size: 18px; font-size: 1.8rem; margin-bottom: 15px}
+	blockquote cite { display: block; color: #555; font-style: normal; font-weight: 600; letter-spacing: 1px; text-transform: uppercase; font-size: 10px; font-size: 1.0rem; }
+	blockquote p, blockquote cite { font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif; line-height: 1.3; }
 
-	hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
+	hr { border: solid #ddd; border-width: 3px 0 0; clear: both; margin: 10px 0 20px; height: 0; }
 
 
 /* #Links
