--- a/css/layout.css
+++ b/css/layout.css
@@ -103,7 +103,7 @@
 	#portfolio ul li.if { margin-left: 40px; list-style-type: disc; font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; line-height: 1.4; letter-spacing:-1px; font-size: 14px; font-size: 1.4rem;}
 	#portfolio img { width: 100%; }
 	#portfolio-img { opacity: 0; }
-	#portfolio figure { box-shadow: -6px 6px 0px #ccc; }
+	#portfolio figure { box-shadow: -6px 6px 0px #ccc; position: relative; }
 
 	#testimonials { background-color: #f7f7f7; color: #333; padding: 30px 0;}
 	.insert { opacity: 0; }
@@ -319,6 +319,7 @@
 	/* In Between Mobile and Small Desktop */
 	@media only screen and (min-width: 768px) and (max-width: 980px) {
 		#social .social-icons i { margin-right: 0; margin-bottom: 10px; width: 10px; display: block; }
+		#portfolio { background-color: #f7f7f7; color: #333; padding: 15px 20px; overflow: hidden; }
 		#portfolio .link-container {width: 30%;}
 		#portfolio .description-container { width: 70%;}
 		#portfolio .screen-container { 
