--- a/css/layout.css
+++ b/css/layout.css
@@ -24,8 +24,7 @@
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
 	}
-	#parallax-container .notice { position: fixed; right: 20px; top: 20px; background-color: #f7f7f7; padding: 5px 20px; border-radius: 30px; color: #333; -webkit-transition: opacity 0.3s linear; -moz-transition: opacity 0.3s linear; -o-transition: opacity 0.3s linear; -ms-transition: opacity 0.3s linear; transition: opacity 0.3s linear; opacity: 0; z-index: 10001; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; font-size: 14px;}
-	#parallax-container.alert .notice { position: fixed; right: 20px; top: 20px; opacity: 1; z-index: 9999; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; -webkit-transform: translateZ(0); cursor:pointer;}
+	/*.notice { position: absolute; right: 20px; top: 20px; background-color: #f7f7f7; padding: 5px 20px; border-radius: 30px; color: #333; -webkit-transition: opacity 0.3s linear; -moz-transition: opacity 0.3s linear; -o-transition: opacity 0.3s linear; -ms-transition: opacity 0.3s linear; transition: opacity 0.3s linear; opacity: 1; z-index: 10001; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; font-size: 14px;}*/
 	
 	.typed-cursor{
     opacity: 1;
