--- a/css/layout.css
+++ b/css/layout.css
@@ -122,11 +122,11 @@
 	#testimonials blockquote { margin: 20px 0 40px 0; padding: 0 20px 0;}
 
 	#social { background-color: #1c0806; color: #ccc; padding: 40px 20px 10px; }
-	#social h4 { color: #f7f7f7; font-size: 16px; margin-bottom: 10px; line-height: 1.4; text-align: center; }
+	#social h4 { color: #f7f7f7; font-size: 16px; margin-bottom: 10px; line-height: 1.4; text-align: left; }
 	.now-reading-image, .now-listening-image, .now-playing-image, .now-watching-image {width: 100%; height: auto; opacity: 0.5; margin-bottom: 15px; -webkit-transition: all 0.05s linear; -moz-transition: all 0.05s linear; -o-transition: all 0.05s linear; -ms-transition: all 0.05s linear; transition: all 0.05s linear; backface-visibility: hidden; -webkit-backface-visibility: hidden; }
-	.now-reading-image { background: url('../images/now-reading.jpg') no-repeat center center; min-height: 118px; background-size: cover;}
+	.now-reading-image { background: url('../images/now-reading.png') no-repeat center center; min-height: 118px; background-size: cover;}
 	.now-listening-image { background: url('../images/now-listening.jpg') no-repeat center center; min-height: 118px; background-size: cover;}
-	.now-watching-image { background: url('../images/now-watching.jpg') no-repeat center center; min-height: 118px; background-size: cover;}
+	.now-watching-image { background: url('../images/now-viewing.jpg') no-repeat center center; min-height: 118px; background-size: cover;}
 	.now-playing-image { background: url('../images/now-playing.jpg') no-repeat center center; min-height: 118px; background-size: cover;}
 	.now-reading-image:hover, .now-listening-image:hover, .now-playing-image:hover, .now-watching-image:hover { opacity: 1;}
 	.now-reading p, .now-listening p, .now-playing p, .now-watching p  { font-size: 14px; margin: 0;}
@@ -151,11 +151,12 @@
 		
 	#contact { background-color: #212121; color: #ccc; padding: 0; text-align: center; }
 	#contact h2, #contact h2 span { font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif; font-weight: bold; color: #f7f7f7; line-height: 1.3;}
-	#contact p { margin-bottom: 40px; }
+	#contact p { margin-bottom: 30px; }
 	#contact a:hover { color: #ef4723; -webkit-transition: color 0.5s; transition: color 0.35s; }
 	#sign-up { opacity: 0; }
 	#mc_embed_signup {
 		text-align: center;
+		margin-top: 40px;
 	}
 	#mc_embed_signup input {
 		background-color: #f2f2f2;
@@ -179,8 +180,8 @@
 		padding: 10px 0; 
 		font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif;
 		font-weight: 800;
-		font-size: 14px;
-		font-size: 1.4rem;
+		font-size: 12px;
+		font-size: 1.2rem;
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		-webkit-transition: all .3s linear;
@@ -212,6 +213,19 @@
 	#tarpits, #capitalist, #current-music, #current-reading { display:none; padding: 30px; background: #FFF; box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7); max-width: 85%; }
 	
 	#tarpits img, #capitalist img, #current-music img, #current-reading img { width: 100%; }
+
+	.ps-text {
+		font-size: 18px;
+		margin: 20px 0 50px 0;
+	}
+
+	.ps-text a {
+		color: #fff;
+	}
+
+	.ps-text a:hover {
+		color: #ef4723;
+	}
 
 	.copyright-props {
 		height: 50px;
