--- a/css/layout.css
+++ b/css/layout.css
@@ -84,7 +84,8 @@
 
 	#services { background-color: #1c0806; padding: 0; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; }
 	#services h2 { font-size: 40px; font-size: 1.8em; line-height: 1.3; }
-
+	#services a { font-weight: bold; text-decoration: none; padding-bottom: 1px; border-bottom: 1px #333 solid;}
+	#services a:hover { border-bottom: 1px #ef4723 solid; }
 	#services2 { background-color: #f7f7f7; color: #808080; padding: 0; }
 	#services-left { opacity: 0; }
 	#services-right { opacity: 0; }
@@ -99,7 +100,23 @@
 	#portfolio a:hover { border-bottom: 1px #ef4723 solid; }
 	#portfolio h2 { line-height: 1.3; }
 	#portfolio blockquote { margin: 30px 0 50px; }
-	#portfolio ul li.if { margin-left: 40px; list-style-type: disc; font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; line-height: 1.4; letter-spacing:-1px; font-size: 14px; font-size: 1.4rem;}
+	#portfolio ul li.if { padding-left: 40px; list-style: none; font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; line-height: 1.6; letter-spacing:-1px; font-size: 14px; font-size: 1.4rem;}
+	#portfolio ul li.if:before {
+		margin-left: -1.5em;
+		margin-right: 0.5em;
+	}
+	#portfolio ul li.if:nth-of-type(1):before {
+		content: '•';
+		content: '🚀';
+	}
+	#portfolio ul li.if:nth-of-type(2):before {
+		content: '•';
+		content: '💪';
+	}
+	#portfolio ul li.if:nth-of-type(3):before {
+		content: '•';
+		content: '🚗';
+	}
 	#portfolio img { width: 100%; }
 	#portfolio-img { opacity: 0; }
 	#portfolio figure { box-shadow: -6px 6px 0px #ccc; position: relative; }
@@ -112,6 +129,9 @@
 	#portfolio .insert ul li:before {content: "+"; font-size: 18px; margin-right: 5px; color: #ef4723;}
 	#portfolio .insert ul li a, #portfolio .insert ul li a:active, #portfolio .insert ul li a:focus { border-bottom: none; padding-bottom: none;}
 	.item-description { font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif; font-size: 14px; letter-spacing: 0; font-weight: bold;}
+	.item-link small, .item-link abbr {
+		font-weight: bold;
+	}
 	#portfolio .item-description a { color: #333; text-decoration: none; padding-bottom: 0; border-bottom: none; }
 	#portfolio .item-description a:hover { color: #ef4723; text-decoration: none; padding-bottom: 0; border-bottom: none; }
 	.screen { position: absolute; bottom: 0;}
@@ -150,6 +170,7 @@
 	#social p.tweet img { height: 20px; width: auto; }
 		
 	#contact { background-color: #212121; color: #ccc; padding: 0; text-align: center; }
+	#contact img { border-radius: 50%; width: 80px; height: 80px; margin-bottom: 10px;}
 	#contact h2, #contact h2 span { font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif; font-weight: bold; color: #f7f7f7; line-height: 1.3;}
 	#contact p { margin-bottom: 30px; }
 	#contact a:hover { color: #ef4723; -webkit-transition: color 0.5s; transition: color 0.35s; }
